no longer need .asp constants, now using .html

--- a/Formative00/Formative00.html
+++ b/Formative00/Formative00.html
@@ -1,16 +1,11 @@
-﻿<%@ Language=VBScript %>
-<% Response.Buffer = false %>
-<!-- #include virtual ="/Code/constants.asp" -->
-<% CurrentSemester = Semester %>
-
-<!doctype html>
+﻿<!doctype html>
 <html lang="en">
 
 <head>
     <meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title><% response.write(semester) %>Formative00</title>
+    <title>Formative00</title>
     <!-- Bootstrap -->
 	<link href="bootstrap.css" rel="stylesheet">
 
